<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AirDesk</string>
    <string name="login_email_hint">E-mail</string>
    <string name="login_button">Login</string>
    <string name="action_settings">Settings</string>

    <string name="create_workspace">Create Workspace</string>
    <string name="save_workspace">Save</string>
    <string name="owned_workspaces">Owned Workspaces</string>
    <string name="edit_access_list">AL</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="create">Add</string>
    <string name="settings">Edit</string>
    <string name="remove_workspace">Remove</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="create_file">Create File</string>

    <string name="title_activity_workspace_list">Workspaces</string>
    <string name="title_activity_edit_file">File Editor</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="hello_world">Hello world!</string>

    <string name="nickname">Nickname</string>
    <string name="email">E-mail</string>
    <string name="save">Save</string>

    <string name="workspace_name_desc">Name</string>
    <string name="workspace_quota_desc">Quota (Bytes)</string>
    <string name="workspace_visibility_desc">Visibility</string>
    <string name="workspace_tags_desc">Tags</string>

    <string name="title_activity_create_owner_workspace">Workspace Settings</string>
    <string name="title_activity_file_list">Files</string>
    <string name="title_activity_workspace_settings">WorkspaceSettingsActivity</string>
    <string name="title_activity_show_file">File Viewer</string>
    <string name="title_activity_edit_access_list">Access List</string>
    <string name="addUserAccessList">Invite</string>

    <string name="filename">Filename</string>
    <string name="edit_file">Edit File</string>
    <string name="empty">« File is empty... »</string>
    <string name="content">« You are free to write something... »</string>
    <string name="tagsHint">Tags separated by ;</string>
    <string name="populate">Populate</string>
    <string name="disconnect">Disconnect</string>
    <string name="deleteUser">Delete User</string>
    <string name="insert_file_name">Insert File Name</string>

    <string name="port">10001</string>
</resources>
